k8s/manifest_k8s.yaml
## K8S Manifestes
## Deployment

apiVersion: v1
kind: Namespace
metadata:
  name: ecosia-test
  resourceVersion: "4002"
  selfLink: /api/v1/namespaces/ecosia-test
  uid: 22d40f5f-1154-4ee5-852e-a34585d00b4a
spec:
  finalizers:
  - kubernetes
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: web-server
  name: web-server
  namespace: ecosia-test
  resourceVersion: "4176"
  selfLink: /apis/apps/v1/namespaces/ecosia-test/deployments/web-server
  uid: e5a94893-f07a-458c-9112-dcd521da85df
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-server
    spec:
      containers:
      - image: ecosia/python-docker:0.0.1
        imagePullPolicy: IfNotPresent
        name: python-docker
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
 
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-server
  name: api
  namespace: ecosia-test
  resourceVersion: "63673"
  selfLink: /api/v1/namespaces/ecosia-test/services/api
  uid: 437e635f-29d5-4b0d-986c-c668aba53050
spec:
  clusterIP: 10.98.232.202
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: web-server
  sessionAffinity: None
  type: ClusterIP 
status:
  loadBalancer: {}  

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ecosia-api
  namespace: ecosia-test
spec:
  rules:
  - host: local.ecosia.org
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 5000
        path: /tree(/|$)(.*)
